--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
 <body>
   <main>
     <header class="equalizer-logo">
-      <img class="logo" src="/equalizer-landing-page/assets/logo.svg">
+      <img class="logo" src="assets/logo.svg">
     </header>
     <section class="hero">
       <h1 class="hero-title">We make your music sound extraordinary.</h1>
       <p class="hero-body">A system audio equalizer specifically designed for Android and iOS. Freely tune the
         way your music sounds with a professional grade parametric EQ & volume mixer. Control
         bass, mids, treble, gain control, reverb, and more!</p>
-      <img class="hero-image" src="/equalizer-landing-page/assets/bg-pattern-1.svg"">
+      <img class="hero-image" src="assets/bg-pattern-1.svg"">
     </section>
 
     <section class="body-container">
-      <img class="body-illustration" src="/equalizer-landing-page/assets/illustration-app.png">
-      <div class="body-image"><img src="/equalizer-landing-page/assets/bg-pattern-2.svg"></div>
+      <img class="body-illustration" src="assets/illustration-app.png">
+      <div class="body-image"><img src="assets/bg-pattern-2.svg"></div>
       <div class="body-pricing">
         <h2 class="body-pricing-title">Premium EQ</h2>
         <p class="body-pricing-body">Get expert-level control with a robust equalizer, volume mixer, and spatial
@@ -36,23 +36,23 @@
           <p class="body-pricing-cost">4$</p>
           <p class="body-pricing-month">/ month</p>
         </div>
-        <button class="btn apple"><img src="/equalizer-landing-page/assets/icon-apple.svg"> iOS Download</button>
-        <button class="btn android"><img src="/equalizer-landing-page/assets/icon-android.svg"> Android Download</button>
+        <button class="btn apple"><img src="assets/icon-apple.svg"> iOS Download</button>
+        <button class="btn android"><img src="assets/icon-android.svg"> Android Download</button>
 
     </section>
   </main>
 
   <footer>
-    <div class="footer-container"><img class="logo logo-footer" src="/equalizer-landing-page/assets/logo.svg">
+    <div class="footer-container"><img class="logo logo-footer" src="assets/logo.svg">
       <p class="footer-body">All rights reserved © Equalizer 2021<br>
         Have any problems? Contact us via social media or email us at <span
           class="footer-email">equalizer@example.com</span></p>
     </div>
 
     <div class="social-links">
-      <img class="social-btn" src="/equalizer-landing-page/assets/icon-facebook.svg">
-      <img class="social-btn" src="/equalizer-landing-page/assets/icon-instagram.svg">
-      <img class="social-btn" src="/equalizer-landing-page/assets/icon-twitter.svg">
+      <img class="social-btn" src="assets/icon-facebook.svg">
+      <img class="social-btn" src="assets/icon-instagram.svg">
+      <img class="social-btn" src="assets/icon-twitter.svg">
     </div>
   </footer>
 
